🌱 Male UHC compile on 1.18.2 and update Codecs & registries